--- a/Basic_Portfolio-master/past.html
+++ b/Basic_Portfolio-master/past.html
@@ -6,7 +6,16 @@
         <link rel="stylesheet" type="text/css" href="past.css">
     </head>
     <body>
+            <div class="topnav">
+                    <a class="active" href="index.html">Home</a>
+                    <a href="contact.html">Contact</a>
+                    <a href="past.html">My work</a>
+                  </div> 
         <h1>Stuff I've done!</h1>
-        <h2>Look At This Portfolio!!! More To come!</h2>
+        <h2>Of course, I am the creator of this portfolio! Also, my other works (some in progress);
+            <ul>
+                    <a href="https://github.com/joshuabyker/MAH_Teahouse.git"><li> Milk & Honey Teahouse Website</li></a>
+            </ul>
+        </h2>
     </body>
 </html>
