--- a/Basic_Portfolio-master/contact.html
+++ b/Basic_Portfolio-master/contact.html
@@ -7,6 +7,11 @@
  
 </head>
 <body>
+    <div class="topnav">
+        <a class="active" href="index.html">Home</a>
+        <a href="contact.html">Contact</a>
+        <a href="past.html">My work</a>
+      </div> 
   <form method="POST" action="/this.html">
     <fieldset id="personal_information">
         <legend>Project Information</legend>
